[tool.poetry]
name = "digital_twin"
version = "0.0.1"
description = ""
authors = ["Alexandre Bernard--Michinov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.*"
ruff = "0.11.*"


[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--import-mode=importlib"
testpaths = [
    "tests"
]
